crates/courier-ftp/src/components/dialog/snapshots/courier_ftp__components__dialog__snapshot_tests__snap_list_view_sections_filter_80x24.snap
---
source: crates/courier-ftp/src/components/dialog/snapshot_tests.rs
expression: "hs.render(w, h)"
---
 Quickconnect (not available yet)                                               
 1 Local                                                                        
┌ Message log ─────────────────────────────────────────────────────────────────┐
│(not available yet)                                                           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┏▶Local ━━━━━━┌ Columns ────────────────────────────────────────┐──────────────┐
┃(not availabl│ ▶Columns │ [x] Name                             │              │
┃             │            [x] Name                             │              │
┃             │                                                 │              │
┃             │                                                 │              │
┃             │                                                 │              │
┃             │                                                 │              │
┃             │                                                 │              │
┃             │            /me_                                 │              │
┃             │                                                 │              │
┃             │               [ OK ]  [ Cancel ]                │              │
┃             └─────────────────────────────────────────────────┘              │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────┘
┌ Queue ───────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 DIALOG                                                       F1 help  F10 quit
