crates/courier-ftp/src/components/dialog/snapshots/courier_ftp__components__dialog__snapshot_tests__snap_message_info_80x24.snap
---
source: crates/courier-ftp/src/components/dialog/snapshot_tests.rs
expression: "hs.render(w, h)"
---
 Quickconnect (not available yet)                                               
 1 Local                                                                        
┌ Message log · Tab 1 ─────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┏▶Local ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Remote ──────────────────────────────┐
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                   ┌ Info: Transfer ──────────────────────┐                   │
┃                   │ 12 files were transferred.           │                   │
┃                   │ The queue is empty.                  │                   │
┃                   │                                      │to any server      │
┃                   │                [ OK ]                │ · Ctrl-k Quickcon…│
┃                   └──────────────────────────────────────┘                   │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────┘
┌ Queue ───────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 – not connected │ Type: Auto │ ⇅ off                                  F10 quit
